--- a/trade-goods/src/main/resources/application.properties
+++ b/trade-goods/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #?????
 server.port = 8081
 ## MySQL
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/trade?useUnicode=true&characterEncoding=utf8&useSSL=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/trade_sys?useUnicode=true&characterEncoding=utf8&useSSL=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=12345678
 
