--- a/trade-goods/src/main/resources/application.properties
+++ b/trade-goods/src/main/resources/application.properties
@@ -10,3 +10,8 @@ spring.datasource.password=12345678
 mybatis.mapper-locations: classpath:mappers/*.xml
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 logging.level.com.boku.www.mapper=debug
+
+##elasticSearch
+elasticsearch.host=localhost
+elasticsearch.port=9200
+
