--- a/trade-order/src/main/resources/application.properties
+++ b/trade-order/src/main/resources/application.properties
@@ -13,5 +13,9 @@ mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 logging.level.com.boku.www.mapper=debug
 spring.thymeleaf.prefix=classpath:/templates/
 
-
-
+## rabbitMQ
+spring.rabbitmq.host=127.0.0.1
+spring.rabbitmq.port=5672
+spring.rabbitmq.virtual-host=/
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
