--- a/trade-lightning-deal/pom.xml
+++ b/trade-lightning-deal/pom.xml
@@ -18,6 +18,14 @@
     </properties>
 
     <dependencies>
+        <!--  订单模块 -->
+        <dependency>
+            <groupId>com.shangan</groupId>
+            <artifactId>trade-order</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+
         <!-- spring 配置文件-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -67,11 +75,6 @@
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
             <version>1.2.75</version>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <scope>test</scope>
         </dependency>
 
         <!-- Redis -->
