--- a/trade-order/src/main/resources/application.properties
+++ b/trade-order/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.datasource.password = 12345678
 # myBatis
 mybatis.mapper-locations: classpath*:mappers/*.xml
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+#mybatis.configuration.log-impl=org.apache.ibatis.logging.nologging.NoLoggingImpl
 logging.level.com.boku.www.mapper=debug
 spring.thymeleaf.prefix=classpath:/templates/
 
