Distributed System Project Strucutre Modification

--- a/trade-order/src/main/resources/application.properties
+++ b/trade-order/src/main/resources/application.properties
@@ -20,3 +20,16 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.virtual-host=/
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+
+##cousul
+##application-name
+spring.application.name = trade-order
+#cousul port
+spring.cloud.consul.port = 8500
+#cousul host
+spring.cloud.consul.host = 127.0.0.1
+spring.cloud.consul.discovery.prefer-ip-address=true
+#service-name
+spring.cloud.consul.discovery.service-name=${spring.application.name}
+#what's the function?
+spring.main.allow-bean-definition-overriding=true
