--- a/trade-goods/src/main/resources/application.properties
+++ b/trade-goods/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#?????
+#port
 server.port = 8081
 ## MySQL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -10,3 +10,14 @@ spring.datasource.password=12345678
 mybatis.mapper-locations: classpath:mappers/*.xml
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 logging.level.com.boku.www.mapper=debug
+
+###consul
+#application-name
+spring.application.name=trade-goods
+#consul port
+spring.cloud.consul.port = 8500
+#consul port
+spring.cloud.consul.host = 127.0.0.1
+spring.cloud.consul.discovery.prefer-ip-address=true
+#service-name
+spring.cloud.consul.discovery.service-name = ${spring.application.name}
