--- a/trade-web-manager/src/main/resources/application.properties
+++ b/trade-web-manager/src/main/resources/application.properties
@@ -13,5 +13,17 @@ mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
 logging.level.com.boku.www.mapper=debug
 
+###consul
+#application-name
+spring.application.name=trade-web-manager
+#consul port
+spirng.cloud.consul.port = 8500
+#consul host
+spring.cloud.consul.host = 127.0.0.1
+spring.cloud.consul.discovery.prefer-ip-address=true
+#service-name
+spirng.cloud.consul.discovery.service-name = ${spring.application.name}
+
+spring.main.allow-bean-definition-overriding=true
 
 
