--- a/trade-order/src/main/resources/application.properties
+++ b/trade-order/src/main/resources/application.properties
@@ -33,3 +33,48 @@ spring.cloud.consul.discovery.prefer-ip-address=true
 spring.cloud.consul.discovery.service-name=${spring.application.name}
 #what's the function?
 spring.main.allow-bean-definition-overriding=true
+
+#m1 m2 database
+spring.shardingsphere.datasource.names = m1, m2
+
+#m1
+spring.shardingsphere.datasource.m1.type =com.alibaba.druid.pool.DruidDataSource
+spring.shardingsphere.datasource.m1.driver-class-name=com.mysql.jdbc.Driver
+spring.shardingsphere.datasource.m1.url=jdbc:mysql://localhost:3306/trade_sys_db1?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8&useSSL=true
+spring.shardingsphere.datasource.m1.username=root
+spring.shardingsphere.datasource.m1.password = 12345678
+
+#m2
+spring.shardingsphere.datasource.m2.type = com.alibaba.druid.pool.DruidDataSource
+spring.shardingsphere.datasource.m2.driver-class-name=com.mysql.jdbc.Driver
+spring.shardingsphere.datasource.m2.url=jdbc:mysql://localhost:3306/trade_sys_db2?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8&useSSL=true
+spring.shardingsphere.datasource.m2.username=root
+spring.shardingsphere.datasource.m2.password=12345678
+
+#m1.order_info_1 m1.order_info_2 m2.order_info_1 m2.order_info_2
+#improve the scalability and performance of the application
+spring.shardingsphere.rules.sharding.tables.order_info.actual-data-nodes=m$->{1..2}.order_info_$->{1..2}
+
+spring.shardingsphere.sharding.tables.order_info.key-generator.column=id
+spring.shardingsphere.sharding.tables.order_info.key-generator.type=SNOWFLAKE
+
+#sharding-column
+#horizontally scaling databases
+#If id is 1 -> 1 % 2 + 1 = 2 -> order_info_2
+#if id is 2 -> '2 % 2 + 1 = 1 -> order_info_1
+spring.shardingsphere.sharding.tables.order_info.table-strategy.inline.sharding-column=id
+spring.shardingsphere.sharding.tables.order_info.table-strategy.inline.algorithm-expression=order_info_$->{id % 2 +1}
+
+#user_id
+#both table-level and database-level sharding for the 'order-info' table using Apache
+#shardingsphere in a spring boot application
+spring.shardingsphere.sharding.tables.order_info.database-strategy.inline.sharding-column=user_id
+spring.shardingsphere.sharding.tables.order_info.database-strategy.inline.algorithm-expression=m$->{user_id % 2 +1}
+
+#sql
+#enable the logging of SQL statemetns, the SQL statements executed by the application,
+#along with their actual SQL statements sent to the database, are displayed in the
+#application's log
+#Debugging and understanding how shardingsphere is transforming and routing your SQL
+#queries across different tables and databases
+spring.shardingsphere.props.sql.show=true
